--- a/jenkins-builder/Vagrantfile
+++ b/jenkins-builder/Vagrantfile
@@ -6,5 +6,6 @@ Vagrant.configure(2) do |config|
             v.memory = 2048
             v.cpus = 2
         end
+    config.vm.network :forwarded_port, guest: 2244, host: 2244
     end
 end
